Change div colouring mode
With the css variable, only one color was allowed at a time (changing
the color would also change what was already painted). The colored-block
class was removed, now the background color is set inline for each div
and the clear grid was reworked to work with that approach.

--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,20 @@
   box-sizing: border-box;
 }
 
+:root {
+  --block-size: 25px;
+  --paint-color: black;
+}
+
 body {
   margin: 0;
 }
 
-:root {
-  --block-size: 25px;
+#toolbar {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: left;
 }
 
 #container {
@@ -20,8 +28,4 @@ body {
   border: 1px solid red;
   text-align: center;
   user-select: none;
-}
-
-.colored-block {
-  background-color: blue;
 }
