Add functionality to change grid size
To explain some of the deletions: there were some leftovers from
previous changes left in the code and they were only removed in this
commit.

Now the container has fixed dimensions and the repeat function of the
grid is what receives a variable. The create grid function now receives
a parameter with the dimensions for the grid. The "clear container"
function was created. It just resets the innerHTML of the container,
removing all the divs that were created previously.

--- a/css/style.css
+++ b/css/style.css
@@ -3,8 +3,7 @@
 }
 
 :root {
-  --block-size: 25px;
-  --paint-color: black;
+  --grid-size: 16;
 }
 
 body {
@@ -20,8 +19,10 @@ body {
 
 #container {
   display: grid;
-  grid-template-columns: repeat(16, var(--block-size));
-  grid-template-rows: repeat(16, var(--block-size));
+  grid-template-columns: repeat(var(--grid-size), auto);
+  grid-template-rows: repeat(var(--grid-size), auto);
+  width: 500px;
+  height: 500px;
 }
 
 .grid-block {
