--- a/css/style.css
+++ b/css/style.css
@@ -4,17 +4,34 @@
 
 :root {
   --grid-size: 16;
+  --border-style: solid;
+  --border-color: black;
 }
 
 body {
   margin: 0;
 }
 
+#wrapper {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+}
+
 #toolbar {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: left;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
+  margin: 25px;
+}
+
+#toolbar > * {
+  margin-top: 20px;
+}
+
+h1 {
+  text-align: center;
 }
 
 #container {
@@ -23,10 +40,13 @@ body {
   grid-template-rows: repeat(var(--grid-size), auto);
   width: 500px;
   height: 500px;
+  margin: 25px;
 }
 
 .grid-block {
-  border: 1px solid red;
+  border-width: 1px;
+  border-style: var(--border-style);
+  border-color: var(--border-color);
   text-align: center;
   user-select: none;
 }
