--- a/css/style.css
+++ b/css/style.css
@@ -21,17 +21,38 @@ body {
 #toolbar {
   display: flex;
   flex-direction: column;
-  align-items: left;
+  align-items: flex-start;
   justify-content: center;
   margin: 25px;
+  border: 2px solid black;
+  border-radius: 5px;
+  padding: 25px;
 }
 
 #toolbar > * {
   margin-top: 20px;
 }
 
+#toolbar > div {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+#toolbar > button {
+  width: 100%;
+  height: 40px;
+}
+
+input[type="color"],
+select {
+  flex-grow: 1;
+  margin-left: 15px;
+}
+
 h1 {
-  text-align: center;
+  align-self: center;
+  justify-self: flex-start;
 }
 
 #container {
@@ -41,6 +62,7 @@ h1 {
   width: 500px;
   height: 500px;
   margin: 25px;
+  outline: 1px solid gray;
 }
 
 .grid-block {
